--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      html,body{width: 100%;height: 100%;min-width: 320px;}
+      *{margin: 0;padding: 0;}
+        #app{
+          width: 100%;height:100%;
+          /* background: linear-gradient(180deg,#F5FFFA  0%, #66CDAA 100%);*/font-family: webfont;
+        }
+    </style>
   </head>
   <body>
     <noscript>
