--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
-      html,body{width: 100%;height: 100%;min-width: 320px;}
+      html,body{width: 100%;height: 100%;min-width: 320px;
+          font-family: PingFangSC-Semibold, PingFang SC;}
       *{margin: 0;padding: 0;}
         #app{
           width: 100%;height:100%;
-          /* background: linear-gradient(180deg,#F5FFFA  0%, #66CDAA 100%);*/font-family: webfont;
         }
     </style>
   </head>
